objects/LocalCharge__c/LocalCharge__c.object-meta.xml
<CustomObject>
    <label>Local Charge</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Local Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>