objects/LocalCharge__c/fields/Accountname__c.field-meta.xml
<CustomField>
    <fullName>Accountname__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Local Charges</relationshipLabel>
    <relationshipName>Local_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>