objects/LocalCharge__c/fields/Country_of_POD__c.field-meta.xml
<CustomField>
    <fullName>Country_of_POD__c</fullName>
    <formula>POD__r.Country__c</formula>
    <label>Country of POD</label>
    <type>Text</type>
</CustomField>