objects/LocalCharge__c/fields/Country_of_POL__c.field-meta.xml
<CustomField>
    <fullName>Country_of_POL__c</fullName>
    <formula>POL__r.Country__c</formula>
    <label>Country of POL</label>
    <type>Text</type>
</CustomField>