objects/LocalCharge__c/fields/Duplicate_Found__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicated Found</label>
    <type>Checkbox</type>
</CustomField>