objects/LocalCharge__c/fields/getAccountID__c.field-meta.xml
<CustomField>
    <fullName>getAccountID__c</fullName>
    <formula>Accountname__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>getAccountID</label>
    <type>Text</type>
</CustomField>