objects/LocalCharge__c/fields/GetPODId__c.field-meta.xml
<CustomField>
    <fullName>GetPODId__c</fullName>
    <formula>POD__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GetPODId</label>
    <type>Text</type>
</CustomField>