objects/LocalCharge__c/fields/GetPOLId__c.field-meta.xml
<CustomField>
    <fullName>GetPOLId__c</fullName>
    <formula>POL__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GetPOLId</label>
    <type>Text</type>
</CustomField>