objects/LocalCharge__c/fields/Local_Charge_in__c.field-meta.xml
<CustomField>
    <fullName>Local_Charge_in__c</fullName>
    <label>Local Charge in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Origin</fullName>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>