objects/LocalCharge__c/fields/Local_Charge_name__c.field-meta.xml
<CustomField>
    <fullName>Local_Charge_name__c</fullName>
    <formula>Accountname__r.Name   &amp; &quot; - &quot; &amp;  POL__r.Port_Name_Full__c  &amp; &quot; - &quot; &amp;   POD__r.Port_Name_Full__c</formula>
    <label>Local Charge name</label>
    <type>Text</type>
</CustomField>