objects/LocalCharge__c/fields/POD_text__c.field-meta.xml
<CustomField>
    <fullName>POD_text__c</fullName>
    <label>POD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>