objects/LocalCharge__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POL</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Local Charges</relationshipLabel>
    <relationshipName>Local_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>