objects/LocalCharge__c/fields/Total_Amount_for_Guest_FCY_Des__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_Guest_FCY_Des__c</fullName>
    <label>Total Amount for Guest (FCY) Des</label>
    <summarizedField>LCCLine__c.Total_Selling_Amount_for_Guest_FCY__c</summarizedField>
    <summaryFilterItems>
        <field>LCCLine__c.Charge_in__c</field>
        <operation>equals</operation>
        <value>Destination</value>
    </summaryFilterItems>
    <summaryForeignKey>LCCLine__c.LocalCharge__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>