objects/LocalCharge__c/fields/Total_Amount_for_Guest_Local_Origin__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_Guest_Local_Origin__c</fullName>
    <label>Total Amount for Guest (Local) Origin</label>
    <summarizedField>LCCLine__c.Total_Selling_Amount_for_Guest_Local__c</summarizedField>
    <summaryFilterItems>
        <field>LCCLine__c.Charge_in__c</field>
        <operation>equals</operation>
        <value>Origin</value>
    </summaryFilterItems>
    <summaryForeignKey>LCCLine__c.LocalCharge__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>