objects/LocalCharge__c/fields/Validenddate__c.field-meta.xml
<CustomField>
    <fullName>Validenddate__c</fullName>
    <label>Valid end date</label>
    <type>Date</type>
</CustomField>