objects/LocalCharge__c/fields/Validstartdate__c.field-meta.xml
<CustomField>
    <fullName>Validstartdate__c</fullName>
    <label>Valid start date</label>
    <type>Date</type>
</CustomField>