objects/LocalCharge__c/recordTypes/Air_Service.recordType-meta.xml
<RecordType>
    <fullName>Air_Service</fullName>
    <active>true</active>
    <label>Air Service</label>
</RecordType>