objects/LocalCharge__c/recordTypes/Sea_Service.recordType-meta.xml
<RecordType>
    <fullName>Sea_Service</fullName>
    <active>true</active>
    <label>Sea Service</label>
</RecordType>