objects/LocalCharge__c/validationRules/Not_allow_create_duplicate_Local_Charge.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_allow_create_duplicate_Local_Charge</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Active__c = TRUE ,Duplicate_Found__c = True)</errorConditionFormula>
    <errorMessage>This Local Charge is already existed. Please check again Account, POL, POD, Valid Start date and Valid End date</errorMessage>
</ValidationRule>