objects/LocalCharge__c/listViews/LOCAL_ORIGIN.listView-meta.xml
<ListView>
    <fullName>LOCAL_ORIGIN</fullName>
    <columns>NAME</columns>
    <columns>Accountname__c</columns>
    <columns>POD__c</columns>
    <columns>POL__c</columns>
    <columns>Total_Amount_of_Price_FCY_in_Des__c</columns>
    <columns>Total_Amount_of_Price_FCY_in_Origin__c</columns>
    <columns>Total_Amount_for_Guest_FCY_Des__c</columns>
    <columns>Total_Amount_for_Guest_FCY_Origin__c</columns>
    <columns>Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Accountname__c</field>
        <operation>equals</operation>
        <value>DB</value>
    </filters>
    <label>LOCAL ORIGIN</label>
</ListView>